boreal/tests/assets/invalid_files/compilation/invalid_identifier_type.yar
import "pe"

rule c {
    condition:
        pe.os_version() == /aab/
}
